Fix bug where clicking nav link cut off title

--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -19,8 +19,12 @@
 */
 .section-title {
     font-size: 3em;
-    padding: 50px 0;
     text-align: center;
+    margin-bottom: 50px;
+}
+
+.content-wrapper {
+    padding-top: 100px;
 }
 
 
@@ -211,6 +215,7 @@
     .skills-container {
         width: 60%;
         margin: 0 auto;
+        padding-top: 100px;
         /* Large Devices, Wide Screens */
         @media only screen and (max-width : 1440px) {
             width: 100%;
@@ -507,6 +512,12 @@
         width: 50%;
         margin: 0 auto;
 
+        @media only screen and (max-width : 2560px) {
+            width: 50%;
+        }
+        @media only screen and (max-width : 1660px) {
+            width: 75%;
+        }
         /* Large Devices, Wide Screens */
         @media only screen and (max-width : 1440px) {
             width: 75%;
